Feature/8059/create telegram chat (#1687)
* feat: Create bot core structure

* refactor: remove unused code and cleanup

* Migrate bot from Java 11 to 21, implement production logic, fix Sonar issues

* Refactor SSE, separate to another service and move processImageCommand, processCallBackQuery, processTextCommand from TelegramBot to Service

* Add repository and add new changelog to changelog-master

* Minor refactoring and save ChatFeedback

* Disable callback on inline keyboard after first user evaluation, refactor code, and add tests

* Add new test, temporary comment notificationServiceTests

* Remove isRead attribute in TelegramMessages

* feat: add endpoint to fetch list of unknown users

* Save current version of application

* Fix SonarCloud issue

* Refactored sending notiffication to manager about new green office request from tg user; (#1686)

* Remove unused code and redundant methods in Telegram Bot service.

Cleaned up unused imports, unnecessary methods, and redundant lines across multiple files. Also removed the "makeAddressActual" method and sorting-related functionality. Improved code readability and formatting consistency throughout.

* Add @Profile annotation to TelegramBotConfig

Restrict TelegramBotConfig to non-test profiles to prevent its initialization during tests. This ensures cleaner test environments and avoids unnecessary bot-related configurations in test scenarios.

* Update Postgres version and refactor Telegram bot dependency

Switched Postgres container to the latest version and added a timezone property to Hikari configurations during initialization. Refactored TelegramNotificationService to retrieve the Telegram bot instance from the application context, improving dependency management.

* Add proper formatting

* Fix typos, remove redundancies, and update logic for clarity

Corrected typos such as "Manu" to "Menu" and "Al" to "All" across classes. Replaced unnecessary variable declarations and improved method logic for better r